fixed overflow issue on the wallet page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -586,6 +586,9 @@ input::-webkit-inner-spin-button {
   overflow-y: scroll;
 	height: calc(100% - 169px);
 }
+.keys-container .col-xs-12.single-key:last-child{
+  margin-bottom:100px;
+}
 .wallet-page{
   overflow:hidden;
 }
